@@ -272,7 +272,7 @@ proc xdnd::_HandleXdndDrop { time } {
         %ST  \{$_typelist\}    %TT \{$_types\} \
         %A   $_action          %a \{$_actionlist\} \
         %b   \{$_pressedkeys\} %m \{$_pressedkeys\} \
-        %D   \{$data\}         %e <<Drop:$type>> \
+        %D   [list $data]      %e <<Drop:$type>> \
         %L   \{$_typelist\}    %% % \
         %t   \{$_typelist\}    %T  \{[lindex $_common_drag_source_types 0]\} \
         %c   \{$_codelist\}    %C  \{[lindex $_codelist 0]\} \
@@ -289,7 +289,7 @@ proc xdnd::_HandleXdndDrop { time } {
       %ST  \{$_typelist\}    %TT \{$_types\} \
       %A   $_action          %a \{$_actionlist\} \
       %b   \{$_pressedkeys\} %m \{$_pressedkeys\} \
-      %D   \{$data\}         %e <<Drop>> \
+      %D   [list $data]      %e <<Drop>> \
       %L   \{$_typelist\}    %% % \
       %t   \{$_typelist\}    %T  \{[lindex $_common_drag_source_types 0]\} \
       %c   \{$_codelist\}    %C  \{[lindex $_codelist 0]\} \
